Center align page title and fix borders around the main content area

--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -151,6 +151,7 @@ blockquote {
   padding-bottom: 9px;
   margin: 20px 0 20px;
   border-bottom: 1px solid #eeeeee;
+  text-align: center;
 }
 
 // Default navbar.
@@ -243,10 +244,10 @@ ul.secondary {
 
 div.main-content {
   background-color: #ffffff;
-  border-color: 4px solid #dfdfd3;
+  border: 4px solid #dfdfd3;
   border-radius: 10px;
   font-family: nimbus-sans, sans-serif;
-  padding-bottom: 20px;
+  padding: 20px 0;
 }
 
 // Sidebar blocks.
